--- a/README
+++ b/README
@@ -1,22 +1,22 @@
-What's this
-=================================================
-This is for generating BioBrick Sequence Image[^1] from XML or formatted string.
+# What's this #
+This is for generating BioBrick Sequence Image (like http://2010.igem.org/wiki/images/d/d5/HokkaidoU_Japan_Fig5.jpg)
+from XML or formatted string.
 
-Install
-=================================================
+# Install #
 You need `git` and `pip` or `easy_install` for installing.
-See <http://pypi.python.org/pypi/pip> to more information about `pip`
+See http://pypi.python.org/pypi/pip to more information about `pip`
 
 Install with the command below
 
 	$ git clone git://github.com/alisue/pybiobrick.git
 	$ sudo pip install pybiobrick
 
-How to use
-=================================================
+# How to use #
 Try the command below, it will create GFP.eps file in working directory
 
 	$ pybiobrick "[[Arabinose promoter>> (RBS) ==GFP=> <<Terminator>>"
+	
+Also you can read data from file as well. The command below read `GFP.xml` file as XML format
 
+	$ pybiobrick -i sample/GFP.xml -f xml
 
-[^1]:	Like <http://2010.igem.org/wiki/images/d/d5/HokkaidoU_Japan_Fig5.jpg>
